--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.myapp"
+        applicationId "com.ReactNativeIntro"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
