Fixed api fetch and added image to profile screen.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "fetch-everywhere": "^1.0.5",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
